xfunction is implemented

--- a/playground/playground.vcxproj.filters
+++ b/playground/playground.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="tuple_.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="function.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
