--- a/playground/playground.vcxproj.filters
+++ b/playground/playground.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="function.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="function_.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
