inferface wrapper is copied

--- a/playground/playground.vcxproj.filters
+++ b/playground/playground.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="function_.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="inf_wrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
