--- a/playground/playground.vcxproj.filters
+++ b/playground/playground.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="inf_wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="chronometry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
